Cut off issue fix

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -10,6 +10,7 @@
 
 .navigation {
     width: 100%;
+    height: 89%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
